#+TITLE: CLPM Changelog

* v0.3.3 - 2020-06-29

  + Fix bug in client that caused CLPM to stall when too much was printed to
    its stderr.

* v0.3.2 - 2020-06-08

  + Fix bug in client where =activate-context= did not ignore inherited source
    registries for bundles.
  + Sort more things serializing contexts. Should prevent excessive noise in
    bundle lock files.

* v0.3.1 - 2020-06-04

  + Fix bug in CLPI when interacting with dual-sources
  + Fix bug parsing :version dependency forms from ASDF.

* v0.3.0 - 2020-05-30

  + Pull HTTP client into separate library
    (=clpm-multi-http-client=). Additionally, this library supports connection
    pooling with Drakma, so make Drakma the default on non Windows platforms.
  + Pull ASDF system groveler into separate project.
  + Pull CLPI documentation and implementation into separate project.
  + Pull QL integration for CLPI into separate project.
  + Add =(:grovel :lisp :implementation)= and =(:grovel :lisp :path)= for
    controlling what Lisp implementation is used by the groveler.
  + Installing releases now writes project and release metadata to CLPM's data
    dir. This allows the CLPM cache to be cleared, but have data on installed
    projects remain.
  + Add the =(:log :level)= config option for controlling log verbosity.
  + Add =--no-resolve= option to =bundle install= to prevent re-resolving
    requirements when you know the lock file is up to date.
  + Client largely rewritten to launch a CLPM process and use a REPL to
    communicate instead of translating everything to CLI invocations.
  + Client's INSTALL and UPDATE functions made much simpler and more
    featureful.
  + Client's dribble features improved greatly.
  + =source-registry= CLI added.
  + =output-translations= CLI added.
  + =exec= CLI added.
  + =activate-context= function added to client to allow changing source registry
    and output translations of the current image.